--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 psycopg2==2.8.5
 Pillow==9.1.1
+Django==3.1.13
+django-cors-headers==3.0.2
+djangorestframework==3.9.4
+django-widget-tweaks==1.4.11
+joblib==1.1.0
+fpdf==1.7.2
+pandas==1.3.4
+scikit-learn==1.1.1
